# doc-miner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/docextract/: __init__.py  models.py
src/docextract/parsers/: docx.py  pdf.py
src/docminer/: __init__.py  extractor.py  models.py
src/docminer/llm/: __init__.py  gemini.py
src/docminer/parsers/: __init__.py  docx.py  pdf.py
tests/: test_extractor.py
