[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docextract"
version = "0.1.0"
description = "Extract key-value pairs from PDF and Word documents using free LLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
